--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lama-dev-portfolio",
+  "name": "portofolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,8 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "@emailjs/browser": "^4.4.1",
+    "@react-three/drei": "^9.57.0",
+    "@react-three/fiber": "^8.12.0",
+    "framer-motion": "^12.5.0",
+    "motion": "^12.4.11",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-lazyload": "^3.2.1",
+    "react-type-animation": "^3.2.0",
+    "three": "^0.174.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
