--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-lazyload": "^3.2.1",
+    "react-router-dom": "^7.3.0",
     "react-type-animation": "^3.2.0",
     "three": "^0.174.0"
   },
